--- a/index.html
+++ b/index.html
@@ -6,22 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>background</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/app.js">
 </head>
 <body>
-    <h1 class="one">
-    ONE
-    </h1>
-    <h1 class="two">
-    TWO
-    </h1>
-    <h1 class="three">
-    THREE
-    </h1>
-    <h1 class="four">
-    FOUR
-    </h1>
-    <h1 class="five">
-     FIVE
-    </h1>
+  <div class="one">
+  <div class="water"></div>
+</div>
+
+<div class="two">
+  <div class="loader">
+    <span>L</span>
+    <span>O</span>
+    <span>A</span>
+    <span>D</span>
+    <span>I</span>
+    <span>N</span>
+    <span>G</span>
+ </div>
+</div>
+
+<div class="three">
+  <div id="preloader">
+    <div id="loader"></div>
+  </div>
+</div>
+
+<div class="four">
+  <div class="continuous-4"></div>
+</div>
+
 </body>
 </html>
